--- a/magaza.html
+++ b/magaza.html
@@ -173,8 +173,11 @@
 <script type="module">
   import { supabase } from "./assets/js/supabaseClient.js";
 
-  const { data, error } = await supabase.from("products").select("id").limit(1);
-  console.log("supabase test:", { data, error });
+  // Console’dan da erişelim diye:
+  window.sb = supabase;
+
+  const { data, error } = await supabase.from("products").select("*").limit(5);
+  console.log("products first 5:", { data, error });
 </script>
 </body>
 </html>
