--- a/magaza.html
+++ b/magaza.html
@@ -1,177 +1,33 @@
 <!doctype html>
 <html lang="tr">
- <head>
+<head>
   <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   Mağaza — BERZAN
-  </title>
-  <link href="./styles.css?v=3301" rel="stylesheet"/>
-  <meta content="BERZAN ürünleri: mont, parka, yelek, tulum ve KKD. Saha koşullarına uygun, premium dayanım ve görünürlük." name="description"/>
-  <meta content="index,follow" name="robots"/>
-  <meta content="#131D2E" name="theme-color"/>
-  <meta content="light dark" name="color-scheme"/>
-  <link href="https://berzan.com.tr/magaza.html" rel="canonical"/>
-  <link href="./images/favicon.ico" rel="icon" sizes="any"/>
-  <link href="./images/logo.svg" rel="icon" type="image/svg+xml"/>
-  <link href="./images/favicon-32.png" rel="icon" sizes="32x32" type="image/png"/>
-  <link href="./images/favicon-16.png" rel="icon" sizes="16x16" type="image/png"/>
-  <link href="./images/apple-touch-icon.png" rel="apple-touch-icon"/>
-  <link href="./site.webmanifest" rel="manifest"/>
-  <link as="font" crossorigin="" href="./fonts/MiSansLatin-Regular.woff2" rel="preload" type="font/woff2"/>
-  <link as="font" crossorigin="" href="./fonts/MiSansLatin-Semibold.woff2" rel="preload" type="font/woff2"/>
-  <meta content="tr_TR" property="og:locale"/>
-  <meta content="website" property="og:type"/>
-  <meta content="BERZAN" property="og:site_name"/>
-  <meta content="Mağaza — BERZAN" property="og:title"/>
-  <meta content="BERZAN ürünleri: mont, parka, yelek, tulum ve KKD. Saha koşullarına uygun, premium dayanım ve görünürlük." property="og:description"/>
-  <meta content="https://berzan.com.tr/magaza.html" property="og:url"/>
-  <meta content="https://berzan.com.tr/images/og-berzan.jpg" property="og:image"/>
-  <meta content="1200" property="og:image:width"/>
-  <meta content="630" property="og:image:height"/>
-  <meta content="summary_large_image" name="twitter:card"/>
-  <meta content="Mağaza — BERZAN" name="twitter:title"/>
-  <meta content="BERZAN ürünleri: mont, parka, yelek, tulum ve KKD. Saha koşullarına uygun, premium dayanım ve görünürlük." name="twitter:description"/>
-  <meta content="https://berzan.com.tr/images/og-berzan.jpg" name="twitter:image"/>
- </head>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Mağaza — BERZAN</title>
+  <link rel="stylesheet" href="./assets/css/shop.css?v=1"/>
+</head>
 <body class="magaza-page">
- <header class="nav">
-  <div class="container nav-inner">
-   <a aria-label="BERZAN" class="brand" href="./index.html">
-    <img alt="BERZAN" class="brand-logo" decoding="async" src="./images/logo.svg"/>
-   </a>
-   <nav class="nav-links">
-    <a href="./index.html">Ana Sayfa</a>
-    <a class="active" href="./magaza.html">Mağaza</a>
-   </nav>
-   <div class="nav-actions">
-    <button class="icon-btn" id="openSearch" type="button" aria-label="Ara">Ara</button>
-   </div>
+  <div class="wrap">
+    <div class="topbar">
+      <div class="brand">BERZAN</div>
+      <div class="small">Supabase canlı ürünler</div>
+    </div>
+
+    <div id="categoryPills" class="pills"></div>
+
+    <div class="filters">
+      <button class="chip is-active" data-season="all">Tümü</button>
+      <button class="chip" data-season="yazlik">Yazlık</button>
+      <button class="chip" data-season="kislik">Kışlık</button>
+      <button class="chip" data-season="sezonluk">Sezonluk</button>
+    </div>
+
+    <div id="errorBox" class="err" style="display:none"></div>
+    <div id="grid" class="grid"></div>
+    <div id="empty" class="empty" style="display:none">Ürün bulunamadı.</div>
   </div>
- </header>
 
- <section class="section page-fill store-section">
-  <div class="container">
-   <div class="catbar-wrap reveal">
-    <div class="catbar" aria-label="Kategoriler">
-     <button class="cat-item is-active" data-cat="mont" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M8 7.5 12 5l4 2.5"/><path d="M7.5 8.5 6 11v8.5a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V11l-1.5-2.5"/><path d="M9.2 9.5V21"/><path d="M14.8 9.5V21"/><path d="M10 12h4"/></svg>
-      </span>
-      <span class="cat-txt">Mont</span>
-     </button>
-
-     <button class="cat-item" data-cat="ust" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M8 7 12 5l4 2 2 3-2 1v10a2 2 0 0 1-2 2H10a2 2 0 0 1-2-2V11L6 10l2-3Z"/><path d="M10 12h4"/></svg>
-      </span>
-      <span class="cat-txt">Üst</span>
-     </button>
-
-     <button class="cat-item" data-cat="pantolon" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M9 4h6l1 17-4-3-4 3 1-17Z"/><path d="M9 8h6"/></svg>
-      </span>
-      <span class="cat-txt">Pantolon</span>
-     </button>
-
-     <button class="cat-item" data-cat="yelek" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M9 4h6l2 5-2 12H9L7 9l2-5Z"/><path d="M12 4v17"/><path d="M10 11h4"/></svg>
-      </span>
-      <span class="cat-txt">Yelek</span>
-     </button>
-
-     <button class="cat-item" data-cat="tulum" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M9 4h6l1 6v11a2 2 0 0 1-2 2h-1v-7h-2v7H10a2 2 0 0 1-2-2V10l1-6Z"/><path d="M9 10h6"/></svg>
-      </span>
-      <span class="cat-txt">Tulum</span>
-     </button>
-
-     <button class="cat-item" data-cat="ayakkabi" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M4 16.5c4.2 0 6-4 8.2-4 2.1 0 3.2 2 5.1 2 1.7 0 3.7-1 3.7-1v4H4v-1Z"/><path d="M9 12.5 7 8"/></svg>
-      </span>
-      <span class="cat-txt">Ayakkabı</span>
-     </button>
-
-     <button class="cat-item" data-cat="kkd" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M12 3c-4 0-7 3-7 7v3.5c0 4 3 7.5 7 7.5s7-3.5 7-7.5V10c0-4-3-7-7-7Z"/><path d="M5 11h14"/><path d="M8 11v-1c0-2.2 1.8-4 4-4s4 1.8 4 4v1"/></svg>
-      </span>
-      <span class="cat-txt">KKD</span>
-     </button>
-
-     <button class="cat-item" data-cat="aksesuar" type="button">
-      <span class="cat-ico" aria-hidden="true">
-       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M7 9h10l-1 12H8L7 9Z"/><path d="M9 9V7a3 3 0 0 1 6 0v2"/><path d="M9 13h6"/></svg>
-      </span>
-      <span class="cat-txt">Aksesuar</span>
-     </button>
-    </div>
-   </div>
-
-   <div class="season-wrap reveal">
-    <div class="season-tabs" id="seasonTabs">
-     <div aria-hidden="true" class="season-indicator" id="seasonIndicator"></div>
-     <button class="season-tab" data-season="" type="button">Tümü</button>
-     <button class="season-tab" data-season="yazlik" type="button">Yazlık</button>
-     <button class="season-tab" data-season="kislik" type="button">Kışlık</button>
-     <button class="season-tab" data-season="sezonluk" type="button">Sezonluk</button>
-    </div>
-   </div>
-</div>
-
-   <div class="products-filters reveal" id="productsFilters" style="display:none;"></div>
-
-   <div class="products-grid shop-grid store-grid reveal" id="productsGrid"></div>
-
-   <div class="empty-state" id="emptyState" style="display:none;">
-    <div class="empty-title">Bu kombinasyonda ürün görünmüyor.</div>
-    <div class="empty-sub">Filtreleri değiştir veya farklı kategori dene.</div>
-    <div class="empty-actions">
-     <a class="btn primary" href="./magaza.html">Tümü</a>
-     <a class="btn" href="./uzman.html">Uzmanla Görüş</a>
-    </div>
-   </div>
-
-<footer class="footer">
-   <div class="container">
-    <p>
-     © 2026 BERZAN
-    </p>
-    <p style="margin-top:8px;opacity:.85">
-     <a href="./kvkk.html">
-      KVKK
-     </a>
-     •
-     <a href="./cerez-politikasi.html">
-      Çerez Politikası
-     </a>
-    </p>
-   </div>
-  </footer>
-  <!-- SEARCH -->
-  <div class="backdrop" id="searchBackdrop">
-  </div>
-  <div aria-hidden="true" class="search-sheet" id="searchSheet">
-   <div class="search-row">
-    <div class="search-input">
-     <input id="siteSearchInput" placeholder="Ara: mont, pantolon, yelek…"/>
-    </div>
-    <button class="btn" id="closeSearch" type="button">
-     Kapat
-    </button>
-   </div>
-  </div>
-  <!-- app.js sadece 1 kere -->
-  <script src="./config.js?v=3300"></script>
-<script type="module">
-  import { supabase } from "./assets/js/supabaseClient.js";
-  window.sb = supabase;
-</script>
-<script defer src="./app.js?v=3301"></script>
+  <script src="./config.js?v=1"></script>
+  <script type="module" src="./app.js?v=1"></script>
 </body>
 </html>
