--- a/magaza.html
+++ b/magaza.html
@@ -1,33 +1,108 @@
 <!doctype html>
 <html lang="tr">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mağaza — BERZAN</title>
-  <link rel="stylesheet" href="./assets/css/shop.css?v=1"/>
+  <meta name="description" content="BERZAN iş giyim ürünleri mağazası" />
+
+  <!-- Site geneli stiller -->
+  <link rel="stylesheet" href="./styles.css" />
+
+  <!-- Bu sayfa için min patch (styles.css bozulsa bile UI dağılmasın) -->
+  <style>
+    :root{--wrap-max:1400px;--gutter:28px}
+    .wrap{max-width:var(--wrap-max);margin:0 auto;padding:0 var(--gutter)}
+
+    /* Header */
+    .shop-top{position:sticky;top:0;background:rgba(255,255,255,.86);backdrop-filter:saturate(180%) blur(14px);border-bottom:1px solid rgba(0,0,0,.06);z-index:50}
+    .shop-top .bar{display:flex;align-items:center;justify-content:space-between;padding:16px 0;gap:16px}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.12em}
+    .brand img{width:24px;height:24px;object-fit:contain}
+
+    .top-actions{display:flex;align-items:center;gap:10px}
+    .top-actions a{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:999px;border:1px solid rgba(0,0,0,.08);background:#fff;box-shadow:0 6px 18px rgba(0,0,0,.06);font-weight:600}
+    .top-actions .badge{min-width:22px;height:22px;border-radius:999px;background:#FFE27A;color:#111;display:inline-flex;align-items:center;justify-content:center;font-size:12px;font-weight:800}
+
+    /* Kategori pill row */
+    .pill-row{display:flex;align-items:center;justify-content:center;gap:10px;flex-wrap:wrap;padding:14px 0 18px}
+    .pill{display:inline-flex;align-items:center;gap:10px;padding:10px 14px;border-radius:999px;border:1px solid rgba(0,0,0,.08);background:#fff;cursor:pointer;user-select:none;font-weight:700}
+    .pill.active{border-color:rgba(255,215,0,.65);box-shadow:0 10px 24px rgba(255,215,0,.18)}
+
+    /* Sezon chip row */
+    .chip-row{display:flex;justify-content:center;gap:10px;padding:8px 0 18px}
+    .chip{padding:10px 16px;border-radius:999px;border:1px solid rgba(0,0,0,.08);background:#fff;font-weight:700;cursor:pointer}
+    .chip.active{background:rgba(255,215,0,.18);border-color:rgba(255,215,0,.55)}
+
+    /* Grid */
+    .grid-wrap{padding:22px 0 40px}
+    .products-grid{display:grid;grid-template-columns:repeat(4,minmax(0,1fr));gap:18px}
+    @media (max-width:1100px){.products-grid{grid-template-columns:repeat(3,minmax(0,1fr));}}
+    @media (max-width:820px){.products-grid{grid-template-columns:repeat(2,minmax(0,1fr));}}
+    @media (max-width:520px){.products-grid{grid-template-columns:1fr;}.wrap{padding:0 18px}}
+
+    /* Kart (app.js içinden geliyor ama fall-back ile güzel dursun) */
+    .p-card{border-radius:22px;overflow:hidden;background:#fff;border:1px solid rgba(0,0,0,.08);box-shadow:0 14px 34px rgba(0,0,0,.08)}
+    .p-media{aspect-ratio:4/3;background:#f5f5f7;display:flex;align-items:center;justify-content:center}
+    .p-media img{width:100%;height:100%;object-fit:cover}
+    .p-body{padding:14px 14px 16px;display:flex;flex-direction:column;gap:10px}
+    .p-title{font-weight:800;letter-spacing:.01em}
+    .p-bottom{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .p-price{font-weight:900}
+    .p-btn{padding:10px 14px;border-radius:999px;background:#131D2E;color:#fff;font-weight:800;border:none;cursor:pointer}
+
+    /* States */
+    .empty-state{padding:54px 0;text-align:center;color:rgba(0,0,0,.65)}
+    .empty-state strong{display:block;color:#111;font-size:18px;margin-bottom:6px}
+    .error-box{margin:16px auto 0;max-width:980px;background:#fff3f3;border:1px solid rgba(255,0,0,.18);color:#8b0000;border-radius:16px;padding:12px 14px;display:none}
+  </style>
 </head>
-<body class="magaza-page">
-  <div class="wrap">
-    <div class="topbar">
-      <div class="brand">BERZAN</div>
-      <div class="small">Supabase canlı ürünler</div>
+
+<body>
+  <header class="shop-top">
+    <div class="wrap">
+      <div class="bar">
+        <a class="brand" href="./index.html" aria-label="BERZAN ana sayfa">
+          <span>BERZAN</span>
+        </a>
+
+        <nav class="top-actions" aria-label="Hızlı işlemler">
+          <a href="#" id="openSearch"><span>Ara</span></a>
+          <a href="#" id="openCart"><span>Sepet</span> <span class="badge" id="cartCount">0</span></a>
+        </nav>
+      </div>
+
+      <!-- Kategoriler (app.js buraya dolduracak) -->
+      <div id="categoryPills" class="pill-row" aria-label="Kategoriler"></div>
+
+      <!-- Sezon filtreleri (app.js dinleyecek) -->
+      <div class="chip-row" aria-label="Sezon filtreleri">
+        <button class="chip active" data-season="all" type="button">Tümü</button>
+        <button class="chip" data-season="summer" type="button">Yazlık</button>
+        <button class="chip" data-season="winter" type="button">Kışlık</button>
+        <button class="chip" data-season="season" type="button">Sezonluk</button>
+      </div>
+
+      <div id="errorBox" class="error-box"></div>
     </div>
+  </header>
 
-    <div id="categoryPills" class="pills"></div>
+  <main class="wrap grid-wrap">
+    <section class="products" aria-label="Ürünler">
+      <div id="grid" class="products-grid"></div>
 
-    <div class="filters">
-      <button class="chip is-active" data-season="all">Tümü</button>
-      <button class="chip" data-season="yazlik">Yazlık</button>
-      <button class="chip" data-season="kislik">Kışlık</button>
-      <button class="chip" data-season="sezonluk">Sezonluk</button>
-    </div>
+      <div id="empty" class="empty-state" style="display:none">
+        <strong>Ürün bulunamadı</strong>
+        Filtreleri değiştirip tekrar dene.
+      </div>
+    </section>
+  </main>
 
-    <div id="errorBox" class="err" style="display:none"></div>
-    <div id="grid" class="grid"></div>
-    <div id="empty" class="empty" style="display:none">Ürün bulunamadı.</div>
-  </div>
+  <!-- Arama paneli (istersen sonra bağlarız, şimdilik UI dursun) -->
+  <div class="backdrop" id="searchBackdrop" hidden></div>
 
-  <script src="./config.js?v=1"></script>
-  <script type="module" src="./app.js?v=1"></script>
+  <!-- Supabase config + app -->
+  <script src="./config.js?v=3301"></script>
+  <script defer src="./app.js?v=3301"></script>
 </body>
 </html>
