--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- home -->
 <!doctype html>
 <html lang="tr">
  <head>
@@ -75,6 +74,7 @@
      </p>
      <!-- görsel sonra eklenecek -->
      <div aria-hidden="true" class="hero-visual">
+      <img class="hero-img" src="./images/monthero.webp" alt="BERZAN" loading="eager">
      </div>
      <div class="hero-actions reveal">
       <a class="btn primary" href="./magaza.html">
