--- a/urun.html
+++ b/urun.html
@@ -151,6 +151,11 @@
   </div>
   <script src="./config.js?v=3300"></script>
 
-  <script defer="" src="./app.js?v=3300"></script>
+  <script type="module">
+  import { supabase } from "./assets/js/supabaseClient.js";
+  window.sb = supabase;
+</script>
+
+<script defer="" src="./app.js?v=3300"></script>
  </body>
 </html>
