--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
    </div>
   </header>
-  <section class="hero-dark hero-photo" style="--hero-bg:url('./images/hero.jpg')">
+  <section class="hero-dark hero-photo" style="--hero-bg:url('./images/mainpg.png')">
    <div class="container hero-dark-inner">
     <div class="hero-copy">
      <div class="hero-kicker">
