--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>
    BERZAN — Premium İş Giyim
   </title>
-  <link href="./styles.css?v=3304" rel="stylesheet"/>
+  <link href="./styles.css?v=3300" rel="stylesheet"/>
   <meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." name="description"/>
   <meta content="index,follow" name="robots"/>
   <meta content="#131D2E" name="theme-color"/>
@@ -63,26 +63,17 @@
   <section class="hero-dark hero-photo" style="--hero-bg:url('./images/mainpg.png')">
    <div class="container hero-dark-inner">
     <div class="hero-copy">
-     <div class="hero-kicker">
-      SEZON ODAĞI
-     </div>
-     <h1 class="reveal">
+<h1 class="reveal">
       Görünürlük, kış şartlarında hayati.
      </h1>
      <p class="reveal">
       Düşük ışık, yağmur ve soğuk için geliştirildi.
      </p>
-     <div class="hero-actions reveal">
-      <a class="btn primary" href="./magaza.html">
-       Ürünleri Keşfet
-      </a>
-      <a class="btn ghost" href="./sektorler.html">
-       <span class="underline">
-        Markayı Tanı
-       </span>
-      </a>
+     <div class="hero-actions reveal" style="margin-top:22px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
+      <a class="btn primary" href="./magaza.html">Ürünleri Keşfet</a>
+      <a class="btn" href="./index.html#marka">Markayı Tanı</a>
      </div>
-    </div>
+</div>
    </div>
   </section>
   <section class="showcase">
