--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
   <title>
    BERZAN — Premium İş Giyim
   </title>
-  <link href="./styles.css?v=3330" rel="stylesheet"/>
+  <link href="./styles.css?v=3300" rel="stylesheet"/>
+  <!-- Hero: full-bleed background image override (no inner image card) -->
+  <style>
+   /* Force hero section to be the full background image */
+   .hero-photo{
+     background-image: var(--hero-bg) !important;
+     background-size: cover !important;
+     background-position: center !important;
+     background-repeat: no-repeat !important;
+   }
+   /* Kill any decorative pseudo "image well" layers from older CSS */
+   .hero-photo::before,
+   .hero-photo::after,
+   .hero-dark-inner::before,
+   .hero-dark-inner::after,
+   .hero-copy::before,
+   .hero-copy::after{
+     content: none !important;
+     display: none !important;
+   }
+  </style>
   <meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." name="description"/>
   <meta content="index,follow" name="robots"/>
   <meta content="#131D2E" name="theme-color"/>
