--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>
    BERZAN — Premium İş Giyim
   </title>
-  <link href="./styles.css?v=3343" rel="stylesheet"/>
+  <link href="./styles.css?v=3300" rel="stylesheet"/>
   <!-- Hero: full-bleed background image override (no inner image card) -->
   <style>
    /* Force hero section to be the full background image */
@@ -84,10 +84,10 @@
    <div class="container hero-dark-inner">
     <div class="hero-copy">
 <h1 class="reveal">
-      Görünürlük, kış şartlarında hayati.
+      Geri dönüşüm, çevre duyarlılığı.
      </h1>
      <p class="reveal">
-      Düşük ışık, yağmur ve soğuk için geliştirildi.
+      Sürdürülebilir üretimle daha az atık, daha çok değer.
      </p>
      <div class="hero-actions reveal" style="margin-top:22px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
       <a class="btn primary" href="./magaza.html">Ürünleri Keşfet</a>
