--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="tr">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>
    BERZAN — Premium İş Giyim
   </title>
-  <link href="./styles.css?v=3400" rel="stylesheet"/>
-  <!-- Hero: full-bleed background image override (no inner image card) -->
-  <style>
+<link href="./styles.css?v=3300" rel="stylesheet"/>
+<!-- Hero: full-bleed background image override (no inner image card) -->
+<style>
    /* Force hero section to be the full background image */
    .hero-photo{
      background-image: var(--hero-bg) !important;
@@ -27,219 +28,216 @@
      display: none !important;
    }
   </style>
-  <meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." name="description"/>
-  <meta content="index,follow" name="robots"/>
-  <meta content="#131D2E" name="theme-color"/>
-  <meta content="light dark" name="color-scheme"/>
-  <link href="https://berzan.com.tr/" rel="canonical"/>
-  <link href="./images/favicon.ico" rel="icon" sizes="any"/>
-  <link href="./images/logo.svg" rel="icon" type="image/svg+xml"/>
-  <link href="./images/favicon-32.png" rel="icon" sizes="32x32" type="image/png"/>
-  <link href="./images/favicon-16.png" rel="icon" sizes="16x16" type="image/png"/>
-  <link href="./images/apple-touch-icon.png" rel="apple-touch-icon"/>
-  <link href="./site.webmanifest" rel="manifest"/>
-  <link as="font" crossorigin="" href="./fonts/MiSansLatin-Regular.woff2" rel="preload" type="font/woff2"/>
-  <link as="font" crossorigin="" href="./fonts/MiSansLatin-Semibold.woff2" rel="preload" type="font/woff2"/>
-  <link as="image" fetchpriority="high" href="./images/monthero.webp" rel="preload" type="image/webp"/>
-  <meta content="tr_TR" property="og:locale"/>
-  <meta content="website" property="og:type"/>
-  <meta content="BERZAN" property="og:site_name"/>
-  <meta content="BERZAN — Premium İş Giyim" property="og:title"/>
-  <meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." property="og:description"/>
-  <meta content="https://berzan.com.tr/" property="og:url"/>
-  <meta content="https://berzan.com.tr/images/og-berzan.jpg" property="og:image"/>
-  <meta content="1200" property="og:image:width"/>
-  <meta content="630" property="og:image:height"/>
-  <meta content="summary_large_image" name="twitter:card"/>
-  <meta content="BERZAN — Premium İş Giyim" name="twitter:title"/>
-  <meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." name="twitter:description"/>
-  <meta content="https://berzan.com.tr/images/og-berzan.jpg" name="twitter:image"/>
-  <script type="application/ld+json">
+<meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." name="description"/>
+<meta content="index,follow" name="robots"/>
+<meta content="#131D2E" name="theme-color"/>
+<meta content="light dark" name="color-scheme"/>
+<link href="https://berzan.com.tr/" rel="canonical"/>
+<link href="./images/favicon.ico" rel="icon" sizes="any"/>
+<link href="./images/logo.svg" rel="icon" type="image/svg+xml"/>
+<link href="./images/favicon-32.png" rel="icon" sizes="32x32" type="image/png"/>
+<link href="./images/favicon-16.png" rel="icon" sizes="16x16" type="image/png"/>
+<link href="./images/apple-touch-icon.png" rel="apple-touch-icon"/>
+<link href="./site.webmanifest" rel="manifest"/>
+<link as="font" crossorigin="" href="./fonts/MiSansLatin-Regular.woff2" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="./fonts/MiSansLatin-Semibold.woff2" rel="preload" type="font/woff2"/>
+<link as="image" fetchpriority="high" href="./images/monthero.webp" rel="preload" type="image/webp"/>
+<meta content="tr_TR" property="og:locale"/>
+<meta content="website" property="og:type"/>
+<meta content="BERZAN" property="og:site_name"/>
+<meta content="BERZAN — Premium İş Giyim" property="og:title"/>
+<meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." property="og:description"/>
+<meta content="https://berzan.com.tr/" property="og:url"/>
+<meta content="https://berzan.com.tr/images/og-berzan.jpg" property="og:image"/>
+<meta content="1200" property="og:image:width"/>
+<meta content="630" property="og:image:height"/>
+<meta content="summary_large_image" name="twitter:card"/>
+<meta content="BERZAN — Premium İş Giyim" name="twitter:title"/>
+<meta content="BERZAN; zorlu saha koşulları için yüksek görünürlüklü, dayanıklı iş giyim ürünleri. Mont, parka, yelek ve ekipman çözümleri." name="twitter:description"/>
+<meta content="https://berzan.com.tr/images/og-berzan.jpg" name="twitter:image"/>
+<script type="application/ld+json">
    {"@context": "https://schema.org", "@type": "Organization", "name": "BERZAN", "url": "https://berzan.com.tr/", "logo": "https://berzan.com.tr/images/logo.svg"}
   </script>
-  <script type="application/ld+json">
+<script type="application/ld+json">
    {"@context": "https://schema.org", "@type": "WebSite", "name": "BERZAN", "url": "https://berzan.com.tr/"}
   </script>
- </head>
- <body>
-  <header class="nav">
-   <div class="container nav-inner">
-    <a aria-label="BERZAN" class="brand" href="./index.html">
-     <img alt="BERZAN" class="brand-logo" decoding="async" src="./images/logo.svg"/>
-    </a>
-    <nav class="nav-links">
-     <a class="active" href="./index.html">
+</head>
+<body>
+<header class="nav">
+<div class="container nav-inner">
+<a aria-label="BERZAN" class="brand" href="./index.html">
+<img alt="BERZAN" class="brand-logo" decoding="async" src="./images/logo.svg"/>
+</a>
+<nav class="nav-links">
+<a class="active" href="./index.html">
       Ana Sayfa
      </a>
-     <a href="./magaza.html">Mağaza</a>
+<a href="./magaza.html">Mağaza</a>
 </nav>
-    <div class="nav-actions">
-
-     <button class="icon-btn" id="openSearch" type="button" aria-label="Ara">Ara</button>
-
-    </div>
-   </div>
-  </header>
-  <section class="hero-dark hero-photo" style="--hero-bg:url('./images/mainpg.png')">
-   <div class="container hero-dark-inner">
-    <div class="hero-copy">
+<div class="nav-actions">
+<button aria-label="Ara" class="icon-btn" id="openSearch" type="button">Ara</button>
+</div>
+</div>
+</header>
+<section class="hero-dark hero-photo" style="--hero-bg:url('./images/mainpg.png')">
+<div class="container hero-dark-inner">
+<div class="hero-copy">
 <h1 class="reveal">
       Geri dönüşüm, çevre duyarlılığı.
      </h1>
-     <p class="reveal">
+<p class="reveal">
       Sürdürülebilir üretimle daha az atık, daha çok değer.
      </p>
-     <div class="hero-actions reveal" style="margin-top:54px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
-      <a class="btn primary" href="./magaza.html">Ürünleri Keşfet</a>
-      <a class="btn" href="./index.html#marka">Markayı Tanı</a>
-     </div>
+<div class="hero-actions reveal">
+<a class="btn primary" href="./magaza.html">Ürünleri Keşfet</a>
+<a class="btn" href="./index.html#marka">Markayı Tanı</a>
 </div>
-   </div>
-  </section>
-  <section class="showcase">
-   <div class="container">
-    <!-- HOME HELP CARD -->
-    <div class="tile tile-wide tile-help reveal home-help">
-     <!-- ÜST BAŞLIK (inline style yok) -->
-     <div class="tile-title">
+</div>
+</div>
+</section>
+<section class="showcase">
+<div class="container is-fluid">
+<!-- HOME HELP CARD -->
+<div class="tile tile-wide tile-help reveal home-help">
+<!-- ÜST BAŞLIK (inline style yok) -->
+<div class="tile-title">
       Doğru ürünü seçmek için profesyonelden destek alın
      </div>
-     <!-- ORTA GÖRSELLER -->
-     <div class="home-help-visual">
-      <picture>
-       <source srcset="./images/parka.webp" type="image/webp"/>
-       <img alt="BERZAN Parka" class="brand-grade" decoding="async" fetchpriority="auto" height="2000" loading="lazy" src="./images/parka.png" width="1999"/>
-      </picture>
-     </div>
-     <!-- ALT METİN (inline style yok) -->
-     <div class="tile-sub">
+<!-- ORTA GÖRSELLER -->
+<div class="home-help-visual">
+<picture>
+<source srcset="./images/parka.webp" type="image/webp"/>
+<img alt="BERZAN Parka" class="brand-grade" decoding="async" fetchpriority="auto" height="2000" loading="lazy" src="./images/parka.png" width="1999"/>
+</picture>
+</div>
+<!-- ALT METİN (inline style yok) -->
+<div class="tile-sub">
       Her saha, her iş ve her koşul farklıdır. İhtiyacınıza göre en doğru ürünü birlikte netleştirelim.
      </div>
-     <!-- BUTONLAR (standart class) -->
-     <div class="tile-actions">
-      <a class="btn primary" href="./uzman.html">
+<!-- BUTONLAR (standart class) -->
+<div class="tile-actions">
+<a class="btn primary" href="./uzman.html">
        Uzmanla Görüş
       </a>
-      <a class="btn" href="./magaza.html">
+<a class="btn" href="./magaza.html">
        Ürünleri İncele
       </a>
-     </div>
-    </div>
-    <!-- DİĞER KARTLAR (AYNEN) -->
-    <div class="tile-grid">
-     <a class="tile tile-rect tile-black reveal" style="--media-scale:.84;--media-y:14px" href="./urun.html?urun=mont">
-      <div class="tile-media">
-       <picture>
-        <source srcset="./images/home-product.webp" type="image/webp"/>
-        <img alt="High Visibility Mont" class="brand-grade" decoding="async" fetchpriority="auto" height="1600" loading="eager" src="./images/home-product.jpg" width="1311"/>
-       </picture>
-      </div>
-      <div class="tile-head">
+</div>
+</div>
+<!-- DİĞER KARTLAR (AYNEN) -->
+<div class="tile-grid">
+<a class="tile tile-rect tile-black reveal" href="./urun.html?urun=mont" style="--media-scale:.84;--media-y:14px">
+<div class="tile-media">
+<picture>
+<source srcset="./images/home-product.webp" type="image/webp"/>
+<img alt="High Visibility Mont" class="brand-grade" decoding="async" fetchpriority="auto" height="1600" loading="eager" src="./images/home-product.jpg" width="1311"/>
+</picture>
+</div>
+<div class="tile-head">
        High Visibility Mont
       </div>
-      <div class="tile-copy">
-       <div class="tile-kicker">
+<div class="tile-copy">
+<div class="tile-kicker">
         Ürün
        </div>
-       <div class="tile-sub">
+<div class="tile-sub">
         Gece ve düşük ışık için.
        </div>
-      </div>
-      <div class="tile-cta">
+</div>
+<div class="tile-cta">
        İncele
       </div>
-     </a>
-     <a class="tile tile-rect reveal tile-white-hero" href="./urun.html?urun=mont">
-      <div class="tile-head">
+</a>
+<a class="tile tile-rect reveal tile-white-hero" href="./urun.html?urun=mont">
+<div class="tile-head">
        Heavy Duty Mont
       </div>
-      <div class="tile-media">
-       <picture>
-        <source srcset="./images/monthero.webp" type="image/webp"/>
-        <img alt="Heavy Duty Mont" class="brand-grade" decoding="async" fetchpriority="high" height="1600" loading="eager" src="./images/monthero.png" width="1600"/>
-       </picture>
-      </div>
-      <div class="tile-copy">
-       <div class="tile-kicker">
+<div class="tile-media">
+<picture>
+<source srcset="./images/monthero.webp" type="image/webp"/>
+<img alt="Heavy Duty Mont" class="brand-grade" decoding="async" fetchpriority="high" height="1600" loading="eager" src="./images/monthero.png" width="1600"/>
+</picture>
+</div>
+<div class="tile-copy">
+<div class="tile-kicker">
         Ürün
        </div>
-       <div class="tile-sub">
+<div class="tile-sub">
         Zorlu hava koşulları için.
        </div>
-      </div>
-      <div class="tile-cta">
+</div>
+<div class="tile-cta">
        İncele
       </div>
-     </a>
-     <a class="tile tile-rect reveal" href="./magaza.html">
-      <div class="tile-copy">
-       <div class="tile-kicker">
+</a>
+<a class="tile tile-rect reveal" href="./magaza.html">
+<div class="tile-copy">
+<div class="tile-kicker">
         Ekipman
        </div>
-       <div class="tile-title">
+<div class="tile-title">
         KKD
        </div>
-       <div class="tile-sub">
+<div class="tile-sub">
         Baret, eldiven, gözlük.
        </div>
-      </div>
-      <div class="tile-cta">
+</div>
+<div class="tile-cta">
        İncele
       </div>
-     </a>
-     <a class="tile tile-rect reveal" href="./magaza.html">
-      <div class="tile-copy">
-       <div class="tile-kicker">
+</a>
+<a class="tile tile-rect reveal" href="./magaza.html">
+<div class="tile-copy">
+<div class="tile-kicker">
         Kurumsal
        </div>
-       <div class="tile-title">
+<div class="tile-title">
         Toplu Alım
        </div>
-       <div class="tile-sub">
+<div class="tile-sub">
         Teklif + standartlaşma.
        </div>
-      </div>
-      <div class="tile-cta">
+</div>
+<div class="tile-cta">
        Teklif
       </div>
-     </a>
-    </div>
-    <a class="tile tile-wide reveal wide-glow" href="./sektorler.html">
-     <div class="tile-copy">
-      <div class="tile-kicker">
+</a>
+</div>
+<a class="tile tile-wide reveal wide-glow" href="./sektorler.html">
+<div class="tile-copy">
+<div class="tile-kicker">
        Başlangıç
       </div>
-      <div class="tile-title">
+<div class="tile-title">
        Sektör Seç
       </div>
-      <div class="tile-sub">
+<div class="tile-sub">
        En doğru ürün yolunu aç.
       </div>
-     </div>
-     <div class="tile-cta">
+</div>
+<div class="tile-cta">
       Başla
      </div>
-    </a>
-   </div>
-  </section>
-  <footer class="footer">
-   <div class="container">
-    <p>
+</a>
+</div>
+</section>
+<footer class="footer">
+<div class="container">
+<p>
      © 2026 BERZAN — İş Kıyafetleri &amp; İş Güvenliği Ekipmanları
     </p>
-    <p style="margin-top:8px">
-     <a href="./kvkk.html">
+<p style="margin-top:8px">
+<a href="./kvkk.html">
       KVKK
      </a>
      ·
      <a href="./cerez-politikasi.html">
       Çerez Politikası
      </a>
-    </p>
-   </div>
-  </footer>
-  <script src="./config.js?v=3300"></script>
-
-  <script defer="" src="./app.js?v=3300"></script>
- </body>
+</p>
+</div>
+</footer>
+<script src="./config.js?v=3300"></script>
+<script defer="" src="./app.js?v=3300"></script>
+</body>
 </html>
